--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a href="#portfolio" class="btn">View My Work</a>
             </div>
             <div class="hero-image">
-                <img src="src/Profile.jpeg" alt="Your Photo">
+                <img src="Profile.jpeg" alt="Your Photo">
             </div>
         </div>
     </header>
@@ -53,7 +53,7 @@
             <h2>About Me</h2>
             <div class="about-content">
                 <div class="about-image">
-                    <img src="src/1.3.jpg" alt="About Me">
+                    <img src="1.3.jpg" alt="About Me">
                 </div>
                 <div class="about-text">
                     <h3>Bringing Ideas to Life</h3>
@@ -102,7 +102,7 @@
             <div class="portfolio-grid">
                 <!-- Project 1 -->
                 <div class="portfolio-item">
-                    <img src="src/Skysee.png" alt="SkySee">
+                    <img src="Skysee.png" alt="SkySee">
                     <div class="portfolio-content">
                         <h3>SkySee</h3>
                         <p>A responsive glass-style weather web app with real-time forecasts, GPS location support, and OpenWeather API integration.</p>
@@ -112,7 +112,7 @@
                 </div>
                 <!-- Project 2 -->
                 <div class="portfolio-item">
-                    <img src="src/Cyberviz.png" alt="CyberViz">
+                    <img src="Cyberviz.png" alt="CyberViz">
                     <div class="portfolio-content">
                         <h3>CyberViz</h3>
                         <p>An educational platform visualizing cyber threats with real-world Indian IT Act case studies.</p>
@@ -122,7 +122,7 @@
                 </div>
                 <!-- Project 3 -->
                 <div class="portfolio-item">
-                    <img src="src/DSMS.png" alt="DSMS">
+                    <img src="DSMS.png" alt="DSMS">
                     <div class="portfolio-content">
                         <h3>Decentralized Storage Management System</h3>
                         <p>A blockchain-based decentralized storage system enabling secure, transparent, and distributed data management.(Ongoing)</p>
@@ -164,3 +164,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
