--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a href="#portfolio" class="btn">View My Work</a>
             </div>
             <div class="hero-image">
-                <img src="Profile.jpeg" alt="Your Photo">
+                <img src="hkprofile.png" alt="Your Photo">
             </div>
         </div>
     </header>
@@ -53,7 +53,7 @@
             <h2>About Me</h2>
             <div class="about-content">
                 <div class="about-image">
-                    <img src="1.3.jpg" alt="About Me">
+                    <img src="Profile.jpeg" alt="About Me">
                 </div>
                 <div class="about-text">
                     <h3>Bringing Ideas to Life</h3>
@@ -164,4 +164,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
