--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         My journey into web development started with a curiosity for how websites work, which quickly
                         turned into a passion for bringing ideas to life on the internet.
                     </p>
-                    <a href="your_resume.pdf" class="btn" download>Download Resume <i class="fas fa-download"></i></a>
+                    <a href="Final Resume.pdf" class="btn" download>Download Resume <i class="fas fa-download"></i></a>
                 </div>
             </div>
         </div>
@@ -164,5 +164,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
